<resources>

    <string name="app_name">SimpleCalculatorKotlin</string>

    <string name="placeholder_expression">1 + 3 =</string>
    <string name="placeholder_result">4</string>

    <string name="button_squareRoot">sqrt</string>
    <string name="button_log2">log2</string>
    <string name="button_ln">ln</string>
    <string name="button_leftBracket">(</string>
    <string name="button_rightBracket">)</string>

    <string name="button_powerOfNumber">x^y</string>
    <string name="button_allClear">AC</string>
    <string name="button_back">Back</string>
    <string name="button_percent">%</string>
    <string name="button_division">/</string>

    <string name="button_sinus">sin</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiplication">*</string>

    <string name="button_cosine">cos</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_subtraction">-</string>

    <string name="button_numberPi">Pi</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_addition">+</string>

    <string name="button_exponent">exp</string>
    <string name="button_000">000</string>
    <string name="button_point">.</string>
    <string name="button_0">0</string>
    <string name="button_calculate">=</string>

</resources>